Discover in monitoring

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1082,8 +1082,8 @@ md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolb
   text-align: right;
 }
 
-.monitoring-discover form{
-  display: none;
+.monitoring-discover{
+  margin-bottom: 25px;
 }
 
 .euiBadge, .euiBadge__childButton{
