--- a/public/templates/management/monitoring/configuration.html
+++ b/public/templates/management/monitoring/configuration.html
@@ -2,8 +2,7 @@
 <div layout="row" layout-align="start stretch" class="wz-timelions wz-margin-top-0" ng-show="showConfig">
 
     <!-- Overview visualization card -->
-    <md-card class="wz-md-card"
-        ng-class="{'no-opacity-overview-monitoring': resultState === 'none' || !rendered,'flex-30': resultState === 'ready' && rendered}">
+    <md-card class="wz-md-card" style="height: 400px; width: 400px">
         <md-card-content class="wazuh-column">
             <span class="wz-headline-title">Top 5 nodes</span>
             <md-divider class="wz-margin-top-10"></md-divider>
