--- a/public/templates/management/monitoring/monitoring.pug
+++ b/public/templates/management/monitoring/monitoring.pug
@@ -1,4 +1,4 @@
-include ./monitoring.head
+include ./monitoring.html
 include ./main.html
 include ./main-timelions.html
 include ./configuration.html
