--- a/public/templates/management/monitoring/nodes-list.html
+++ b/public/templates/management/monitoring/nodes-list.html
@@ -1,6 +1,6 @@
 <div layout="column" ng-if="showNodes && !currentNode" class="wz-margin-top-10">
     <!-- Back button -->
-    <div layout="row" class="md-padding-h">
+    <div layout="row" class="md-padding">
         <md-button class="md-icon-button md-icon-button-back wz-padding-right-16 btn btn-info" aria-label="Back"
             tooltip="Go back" tooltip-placement="bottom" ng-click="goBack()"><i class="fa fa-fw fa-arrow-left"
                 aria-hidden="true"></i></md-button>
