--- a/public/templates/agents/dashboards.pug
+++ b/public/templates/agents/dashboards.pug
@@ -5,6 +5,8 @@ include ./agents-pm.html
 include ./agents-mitre.html
 include ./agents-syscollector.html
 include ./agents-sca.html
+<div ng-if="tab === 'configuration' && agent" style="margin-top: 10px;">
+  <react-component ng-if="tab === 'configuration' && agent" name="WzManagementConfiguration" props="{agent: agent, goGroups: goGroups, exportConfiguration: exportConfiguration}"/>
+</div>
 include ./dashboards.html
-include ../management/configuration/agent-configuration.pug
 include ../footer.foot
