--- a/public/templates/agents/agents-syscollector.html
+++ b/public/templates/agents/agents-syscollector.html
@@ -1,6 +1,6 @@
-<div ng-if="tab === 'syscollector'" ng-show="!load" class="euiPageBody">
+<div ng-if="tab === 'syscollector'" ng-show="!load" class="euiPageBody"  style="margin-top: 32px">
 
-  <div layout="row" class="wz-margin-top-16 wz-margin-right-8 wz-margin-left-8"
+  <div layout="row" class="wz-margin-right-8 wz-margin-left-8"
     ng-if="agent && agent.status !== 'Active'">
     <div flex class="euiCallOut euiCallOut--warning">
       <div class="euiCallOutHeader">
