--- a/public/less/common.less
+++ b/public/less/common.less
@@ -458,14 +458,15 @@ md-content.md-default-theme, md-content{
 }
 
 kbn-vis,
-visualize,
-visualization {
+.visualize,
+.visualization {
   display: flex;
   flex: 1 1 100%;
+  height: 100%;
 }
 
-kbn-vis visualize,
-kbn-vis visualization,
+kbn-vis .visualize,
+kbn-vis .visualization,
 kbn-vis .vis-container,
 kbn-vis .visChart__container {
   overflow: hidden !important;
