--- a/public/templates/management/monitoring/main-timelions.html
+++ b/public/templates/management/monitoring/main-timelions.html
@@ -11,34 +11,8 @@
 <!-- End no results section -->
 
 <!-- Monitoring Timelion visualizations section -->
-<div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--responsive height-400"
-    ng-class="{'no-opacity': resultState !== 'ready' || !rendered}"
+<div class="height-400" ng-class="{'no-opacity': resultState === 'none' || !rendered}"
     ng-show="!loading && !showConfig && !showNodes && rendered">
-    <div class="euiPanel euiFlexItem wz-margin-10" ng-class="{'fullscreen': expandArray[0]}">
-        <md-card-actions layout="row" layout-align="end center" class="" ng-dblclick="expand(0)">
-            <span class="embPanel__header embPanel__title embPanel__dragger layout-row wz-headline-title">Cluster alerts
-                summary</span>
-            <span flex></span>
-            <span class="cursor-pointer wz-margin-8-no-left" ng-click="expand(0)">
-                <react-component name="EuiIcon" props="{type:'expand'}" />
-            </span>
-        </md-card-actions>
-        <md-card-content class="wazuh-column">
-            <kbn-vis vis-id="'Wazuh-App-Cluster-monitoring-Overview-Manager'"
-                id="Wazuh-App-Cluster-monitoring-Overview-Manager"></kbn-vis>
-        </md-card-content>
-    </div>
-    <div class="euiPanel euiFlexItem wz-margin-10" flex class="wz-md-card" ng-class="{'fullscreen': expandArray[1]}">
-        <md-card-actions layout="row" layout-align="end center" class="" ng-dblclick="expand(1)">
-            <span class="embPanel__header embPanel__title embPanel__dragger layout-row wz-headline-title">Alerts by node
-                summary</span>
-            <span flex></span>
-            <span class="cursor-pointer wz-margin-8-no-left" ng-click="expand(1)">
-                <react-component name="EuiIcon" props="{type:'expand'}" />
-            </span>
-        </md-card-actions>
-        <kbn-vis vis-id="'Wazuh-App-Cluster-monitoring-Overview'" id="Wazuh-App-Cluster-monitoring-Overview"></kbn-vis>
-        </md-card-content>
-    </div>
+    <react-component name="ClusterTimelions" props="{}" />
 </div>
 <!-- End monitoring Timelion visualizations section -->
