--- a/public/templates/discover/discover.html
+++ b/public/templates/discover/discover.html
@@ -29,7 +29,7 @@
     >
     </wz-top-nav>
   
-    <main ng-show="tabView !== 'cluster-monitoring'" >
+    <main ng-show="tabView !== 'cluster-monitoring'" class="container-fluid">
         <div ng-show="tabView === 'discover'" class="row">
           <div ng-if="tabView === 'discover'" class="col-md-2 sidebar-container collapsible-sidebar" id="discover-sidebar">    
             <div class="dscFieldChooser">
