--- a/public/templates/management/management.pug
+++ b/public/templates/management/management.pug
@@ -1,6 +1,7 @@
 include ./management.head
 include ./management-welcome.html
 include ./monitoring/monitoring.pug
+include ./statistics/statistics.html
 include ./management.html
 
 include ./groups/groups.html
