Fix merge styles

--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -4,7 +4,7 @@
     </div>
     <div ng-show="!actrl.addingNewAgent">
         <div flex="auto" layout="column" ng-cloak ng-controller="overviewController as octrl">
-            <div ng-if="octrl.tab !== 'extensionsDirectory'">
+            <div ng-if="octrl.tab !== 'extensionsDirectory'" style="padding-bottom: 16px;">
                 <!-- Navigation section -->
                 <div layout="row" layout-align="start center">
                     <!-- Breadcrumbs -->
