--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1371,3 +1371,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom {
 .codeEditorWrapper .ace-tm .ace_print-margin{
   visibility: hidden!important;
 }
+
+.euiTableHeaderCellCheckbox{
+  width: 32px!important;
+}
