--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -5,7 +5,7 @@
     <div ng-show="!actrl.addingNewAgent">
         <div flex="auto" layout="column" ng-cloak ng-controller="overviewController as octrl">
             <!-- Navigation section -->
-            <div layout="row" layout-align="start center">
+            <div layout="row" layout-align="start center" ng-if="octrl.tab !== 'welcome'">
                 <!-- Breadcrumbs -->
                 <div layout="row" layout-padding>
                     <!-- If you're not on the Welcome tab, show a functional breadcrumb -->
@@ -57,12 +57,13 @@
             <!-- End of navigation bar -->
 
             <!-- Discover search bar section -->
-            <kbn-dis ng-show="octrl.tab !== 'welcome'" style="padding-bottom: 16px;"></kbn-dis>
+            <kbn-dis ng-show="octrl.tab !== 'welcome'"></kbn-dis>
             <!-- End Discover search bar section -->
 
             <!-- Loading status section -->
-            <div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive">
-                <div class="euiFlexItem euiFlexItem--flexGrowZero euiTextAlign euiTextAlign--center" ng-show="octrl.tab !== 'welcome' && octrl.tabView === 'panels' && !rendered && resultState !== 'none'">
+            <div ng-if="octrl.tab !== 'welcome' && octrl.tabView === 'panels' && !rendered && resultState !== 'none'"
+                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive">
+                <div class="euiFlexItem euiFlexItem--flexGrowZero euiTextAlign euiTextAlign--center">
                     <span class="euiLoadingChart euiLoadingChart--large">
                         <span class="euiLoadingChart__bar"></span>
                         <span class="euiLoadingChart__bar"></span>
@@ -73,28 +74,47 @@
                     <div class="percentage">{{loadingStatus}}</div>
                 </div>
             </div>
-                
+
             <!-- End loading status section -->
 
             <!-- Report status section -->
-            <div layout="column" layout-align="center center" ng-if="octrl.tab !== 'welcome'"
-                ng-show="reportBusy && reportStatus">
-                <div class="percentage"><i class="fa fa-fw fa-spin fa-spinner" aria-hidden="true"></i></div>
-                <div class="percentage">{{reportStatus}}</div>
+            <div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive"
+                ng-if="reportBusy && reportStatus">
+                <div class="euiFlexItem euiFlexItem--flexGrowZero euiTextAlign euiTextAlign--center">
+                    <span class="euiLoadingChart euiLoadingChart--large">
+                        <span class="euiLoadingChart__bar"></span>
+                        <span class="euiLoadingChart__bar"></span>
+                        <span class="euiLoadingChart__bar"></span>
+                        <span class="euiLoadingChart__bar"></span>
+                    </span>
+                    <div class="euiSpacer euiSpacer--m"></div>
+                    <div class="percentage">{{reportStatus}}</div>
+                    <div class="euiSpacer euiSpacer--l"></div>
+                </div>
             </div>
             <!-- End report status section -->
 
             <!-- No results section -->
-            <div layout="row" class="wz-margin-top-10 wz-margin-right-8 wz-margin-left-8" ng-if="octrl.tab !== 'welcome'"
-                ng-show="resultState === 'none' && octrl.tabView === 'panels'">
+            <div layout="row" class="wz-margin-top-10 wz-margin-right-8 wz-margin-left-8"
+                ng-if="octrl.tab !== 'welcome'" ng-show="resultState === 'none' && octrl.tabView === 'panels'">
                 <react-component flex name="EuiCallOut" props="{color:'warning',iconType:'help', title:'There are no results for selected time range. Try another
                     one.'}" />
             </div>
 
-            <div ng-if="actrl.hasAgents === false" class="wz-margin-top-10 wz-margin-right-8 wz-margin-left-8 euiCallOut euiCallOut--warning">
+            <div ng-if="actrl.hasAgents === false"
+                class="wz-margin-top-10 wz-margin-right-8 wz-margin-left-8 euiCallOut euiCallOut--warning">
                 <div class="euiCallOutHeader">
                     <span class="euiCallOutHeader__title ng-binding">
-                        <react-component name="EuiIcon" props="{type:'help'}"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" class="euiIcon euiIcon--medium euiIcon-isLoaded" focusable="false"><defs><path id="help-a" d="M13.6 12.186l-1.357-1.358c-.025-.025-.058-.034-.084-.056.53-.794.84-1.746.84-2.773a4.977 4.977 0 0 0-.84-2.772c.026-.02.059-.03.084-.056L13.6 3.813a6.96 6.96 0 0 1 0 8.373zM8 15A6.956 6.956 0 0 1 3.814 13.6l1.358-1.358c.025-.025.034-.057.055-.084C6.02 12.688 6.974 13 8 13a4.978 4.978 0 0 0 2.773-.84c.02.026.03.058.056.083l1.357 1.358A6.956 6.956 0 0 1 8 15zm-5.601-2.813a6.963 6.963 0 0 1 0-8.373l1.359 1.358c.024.025.057.035.084.056A4.97 4.97 0 0 0 3 8c0 1.027.31 1.98.842 2.773-.027.022-.06.031-.084.056l-1.36 1.358zm5.6-.187A4 4 0 1 1 8 4a4 4 0 0 1 0 8zM8 1c1.573 0 3.019.525 4.187 1.4l-1.357 1.358c-.025.025-.035.057-.056.084A4.979 4.979 0 0 0 8 3a4.979 4.979 0 0 0-2.773.842c-.021-.027-.03-.059-.055-.084L3.814 2.4A6.957 6.957 0 0 1 8 1zm0-1a8.001 8.001 0 1 0 .003 16.002A8.001 8.001 0 0 0 8 0z"></path></defs><use xlink:href="#help-a" fill-rule="evenodd"></use></svg></react-component>
+                        <react-component name="EuiIcon" props="{type:'help'}"><svg width="16" height="16"
+                                viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
+                                class="euiIcon euiIcon--medium euiIcon-isLoaded" focusable="false">
+                                <defs>
+                                    <path id="help-a"
+                                        d="M13.6 12.186l-1.357-1.358c-.025-.025-.058-.034-.084-.056.53-.794.84-1.746.84-2.773a4.977 4.977 0 0 0-.84-2.772c.026-.02.059-.03.084-.056L13.6 3.813a6.96 6.96 0 0 1 0 8.373zM8 15A6.956 6.956 0 0 1 3.814 13.6l1.358-1.358c.025-.025.034-.057.055-.084C6.02 12.688 6.974 13 8 13a4.978 4.978 0 0 0 2.773-.84c.02.026.03.058.056.083l1.357 1.358A6.956 6.956 0 0 1 8 15zm-5.601-2.813a6.963 6.963 0 0 1 0-8.373l1.359 1.358c.024.025.057.035.084.056A4.97 4.97 0 0 0 3 8c0 1.027.31 1.98.842 2.773-.027.022-.06.031-.084.056l-1.36 1.358zm5.6-.187A4 4 0 1 1 8 4a4 4 0 0 1 0 8zM8 1c1.573 0 3.019.525 4.187 1.4l-1.357 1.358c-.025.025-.035.057-.056.084A4.979 4.979 0 0 0 8 3a4.979 4.979 0 0 0-2.773.842c-.021-.027-.03-.059-.055-.084L3.814 2.4A6.957 6.957 0 0 1 8 1zm0-1a8.001 8.001 0 1 0 .003 16.002A8.001 8.001 0 0 0 8 0z">
+                                    </path>
+                                </defs>
+                                <use xlink:href="#help-a" fill-rule="evenodd"></use>
+                            </svg></react-component>
                         No agents were added to this manager:
                     </span>
                     <a ng-click="actrl.addNewAgent(true)">
@@ -103,7 +123,7 @@
                 </div>
             </div>
             <!-- No results section -->
-            
+
             <div ng-class="{'no-opacity': resultState === 'none' || !rendered}" ng-show="octrl.tabView === 'panels'">
                 <react-component name="WzVisualize" props="octrl.visualizeProps" />
             </div>
