--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1377,6 +1377,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom {
     content: '';
     width: 100%;
     height: 2px;
+    margin-left: 25px;
     background-color: #006BB4;
     -webkit-animation: euiBasicTableLoading 1000ms linear;
     animation: euiBasicTableLoading 1000ms linear;
