--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1380,3 +1380,11 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom {
 max-height: 170px;
 overflow-y: scroll;
 }
+
+.kbnTopNavMenu{
+  display: none;
+}
+
+.kbnDis-no-padding .globalQueryBar:not(:empty) {
+  padding: 0px 0px 16px 0px!important;
+}
