--- a/public/templates/welcomeOverview/overview.html
+++ b/public/templates/welcomeOverview/overview.html
@@ -1,3 +1,17 @@
-<div class="euiPage" style="margin: 10px;">
-    <react-component name="WelcomeScreenWrapper" props="welcomeScreenProps" style="width:100%;"></react-component>
+<div class="euiPage">
+    <div class="euiFlexGroup euiFlexGroup--responsive">
+        <div class="euiFlexItem">
+            <div class="euiFlexGroup euiFlexGroup--responsive">
+                <div class="euiFlexItem">
+                    <kbn-dis class="kbnDis-no-padding"></kbn-dis>
+                </div>
+            </div>
+            <div class="euiFlexGroup euiFlexGroup--responsive">
+                <div class="euiFlexItem">
+                    <react-component name="WelcomeScreenWrapper" props="welcomeScreenProps" style="width:100%;">
+                    </react-component>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
