--- a/public/templates/discover/discover.html
+++ b/public/templates/discover/discover.html
@@ -6,9 +6,9 @@
       app-name="'discover'"
       config="topNavMenu"
       show-search-bar="tabView"
-      show-filter-bar="tabView !== 'cluster-monitoring'"
-      show-query-input="tabView !== 'cluster-monitoring'"
-      show-save-query="tabView !== 'cluster-monitoring'"
+      show-filter-bar="tabView !== 'cluster-monitoring' && tabView !== 'statistics' && tabView !== 'welcome'"
+      show-query-input="tabView !== 'cluster-monitoring' && tabView !== 'statistics' && tabView !== 'welcome'"
+      show-save-query="tabView !== 'cluster-monitoring' && tabView !== 'statistics' && tabView !== 'welcome'"
       show-date-picker="enableTimeRangeSelector"
       show-save-query="showSaveQuery"
       query="state.query"
