--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1371,3 +1371,11 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom {
 .codeEditorWrapper .ace-tm .ace_print-margin{
   visibility: hidden!important;
 }
+
+.kbnTopNavMenu{
+  display: none;
+}
+
+.kbnDis-no-padding .globalQueryBar:not(:empty) {
+  padding: 0px 0px 16px 0px!important;
+}
