--- a/public/templates/management/monitoring/monitoring.html
+++ b/public/templates/management/monitoring/monitoring.html
@@ -1,4 +1,4 @@
-<div style="padding:16px" ng-controller="clusterController" ng-if="mctrl.tab === 'monitoring'">
+<div ng-controller="clusterController" ng-if="mctrl.tab === 'monitoring'">
 
     <!-- Cluster disabled or not running -->
     <div ng-show="!isClusterEnabled || !isClusterRunning"
