--- a/public/templates/discover/discover.html
+++ b/public/templates/discover/discover.html
@@ -5,7 +5,10 @@
     <wz-top-nav
       app-name="'discover'"
       config="topNavMenu"
-      show-search-bar="tabView !== 'cluster-monitoring'"
+      show-search-bar="tabView"
+      show-filter-bar="tabView !== 'cluster-monitoring'"
+      show-query-input="tabView !== 'cluster-monitoring'"
+      show-save-query="tabView !== 'cluster-monitoring'"
       show-date-picker="enableTimeRangeSelector"
       show-save-query="showSaveQuery"
       query="state.query"
@@ -24,13 +27,13 @@
       on-saved-query-updated="onSavedQueryUpdated"
       on-clear-saved-query="onClearSavedQuery"
     >
-    </wz-top-nav>    
+    </wz-top-nav>
   
     <main ng-show="tabView !== 'cluster-monitoring'" class="container-fluid">
         <div ng-show="tabView === 'discover'" class="row">
           <div ng-if="tabView === 'discover'" class="col-md-2 sidebar-container collapsible-sidebar" id="discover-sidebar">    
             <div class="dscFieldChooser">
-              <disc-field-chooser
+            <disc-field-chooser
               class="dscFieldChooser"
               columns="state.columns"
               hits="rows"
@@ -231,4 +234,4 @@
         </div>
       </div>
     </main>
-  </discover-app-w>  
+  </discover-app-w>
