--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -21,6 +21,11 @@ html {
 #kibana-body{
   min-height: calc(~'100vh - 1px') !important;
 }
+
+:focus:not(.wz-button):not(.input-filter-box):not(.kuiLocalSearchInput):not(.euiTextArea) {
+  -webkit-animation: none!important;
+}
+
 /* Margins */
 
 .wz-margin-right-8 {
@@ -60,7 +65,7 @@ html {
 }
 
 .wz-margin-top-4 {
-  margin-top: 4px;
+  margin-top: 4px!important;
 }
 
 .wz-margin-top-8 {
