--- a/public/less/typography.less
+++ b/public/less/typography.less
@@ -23,7 +23,7 @@ input,
 select,
 .wz-chip {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif !important;
-  font-size: 14px;
+  font-size: 14px!important;
 }
 
 .wz-headline-title {
