Backports for Wazuh 3.12.0 [7.4.2] (#2133)
* Adapt for 7.6.0

* Update routes kibana

* Modified upgrade guide

* Bump for 3.11.4

* Update kibana-discover.js

* Update package.json

* Update CHANGELOG.md

* Delete wazuh-registry.json

* update changelog master

* Adapt for 7.6.1

* Fix reporting syscheck negative values in atrributes

* Adapt discover

* Fix visualizations report on chrome

* Restructure optimize/wazuh folder (#2116)

* Restructure optimize/wazuh folder

* Update protocol of initial config example

* Replace path with a constant

* Remove wazuh.yml file

* Update README upgrade guide

* Fix plugin helper error

Co-authored-by: Pablo Torres <pablotr9@correo.ugr.es>

* hide manager alerts

* Add rule group win_auth_failure to metrics (#2099)

* Add PCI 11.2.1 y 11.2.3 rules. (#2062)

* Discover in monitoring

* Close 3.12-7.6

* Update changelog

* Update package.json

* Update package.json

* merge 7.6

* merge 7.6

* merge 7.6

* Allow disabling known fields health check (#2037)

* Add https to initial wazuh configuration

* Add https to Wazuh config example

* update changelog

* Fix reports path error

* Close 6.8.7

* Close 7.4.2

* Add checks.fields to initial default config

* Update update-configuration.js

* Fix kibana-discover

Co-authored-by: JuanCarlos <juanca.romo9@gmail.com>
Co-authored-by: Pablo Torres <pablotr9@correo.ugr.es>
Co-authored-by: Victor Santaella <victorst79@gmail.com>

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -926,6 +926,10 @@ wz-xml-file-editor {
   overflow: hidden;
 }
 
+.fullscreen .visWrapper {
+  padding: 26px 0;
+}
+
 .wz-md-card:not(.fullscreen) .sca-vis.sca-gauges .visLib__chart {
   height: 130%;
   overflow: hidden;
@@ -1082,8 +1086,8 @@ md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolb
   text-align: right;
 }
 
-.monitoring-discover form{
-  display: none;
+.monitoring-discover{
+  margin-bottom: 25px;
 }
 
 .euiBadge, .euiBadge__childButton{
