--- a/public/directives/wz-menu/wz-menu.less
+++ b/public/directives/wz-menu/wz-menu.less
@@ -62,6 +62,7 @@
 /* Style for index-pattern selector */
 .wz-menu-select {
     border: none;
+    color: white;
     cursor: pointer;
     background: transparent url("../../img/icons/arrow_down.svg") no-repeat center right;
     -moz-appearance: none;
