--- a/public/directives/wz-menu/wz-menu.less
+++ b/public/directives/wz-menu/wz-menu.less
@@ -71,7 +71,7 @@
 }
 
 /* Style for index-pattern selector options */
-.wz-menu-select-option {
+.wz-menu-select option, .wz-menu-select-option {
     color: rgba(0, 0, 0, 0.87);
     background-color: white;
 }
