new fim settings

--- a/public/templates/management/configuration/integrity-monitoring/fim-general.html
+++ b/public/templates/management/configuration/integrity-monitoring/fim-general.html
@@ -68,6 +68,18 @@
                 label="Command to prevent prelinking"
                 value="currentConfig['syscheck-syscheck'].syscheck.prefilter_cmd || '-'">
             </wz-config-item>
+            <wz-config-item
+                label="Maximum eps"
+                value="currentConfig['syscheck-syscheck'].syscheck.max_eps">
+            </wz-config-item>
+            <wz-config-item
+                label="Process priority"
+                value="currentConfig['syscheck-syscheck'].syscheck.process_priority">
+            </wz-config-item>
+            <wz-config-item
+                label="Database"
+                value="currentConfig['syscheck-syscheck'].syscheck.database">
+            </wz-config-item>
 
         </div>
         <!-- End configuration block -->
