--- a/public/templates/management/configuration/integrity-monitoring/integrity-monitoring.pug
+++ b/public/templates/management/configuration/integrity-monitoring/integrity-monitoring.pug
@@ -4,5 +4,6 @@ include ./fim-ignored.html
 include ./fim-monitored.html
 include ./fim-nodiff.html
 include ./fim-whodata.html
+include ./fim-synchronization.html
 include ./integrity-monitoring.foot
 include ../../../footer.foot
