Added style sheet for modules

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -14,9 +14,9 @@
 /* ------------------------ Wazuh layouts stylesheet ------------------------ */
 /* -------------------------------------------------------------------------- */
 
-html {
+html{
   background: white !important;
-  font-size: 14px!important;
+  font-size: 14px;
 }
 
 .mainView{
