--- a/public/templates/agents/dashboards.html
+++ b/public/templates/agents/dashboards.html
@@ -1,3 +1,3 @@
-<div ng-show="tabView === 'panels' &&  !showSyscheckFiles" ng-class="{'no-opacity': resultState === 'none' || !rendered}" class="md-padding-v">
+<div ng-show="tabView === 'panels' && !showSyscheckFiles && !showNewFim" ng-class="{'no-opacity': resultState === 'none' || !rendered}" class="md-padding-v">
     <react-component name="WzVisualize" props="visualizeProps" />
 </div>
