--- a/public/templates/management/configuration/integrity-monitoring/fim-general.html
+++ b/public/templates/management/configuration/integrity-monitoring/fim-general.html
@@ -69,7 +69,7 @@
                 value="currentConfig['syscheck-syscheck'].syscheck.prefilter_cmd || '-'">
             </wz-config-item>
             <wz-config-item
-                label="Maximum eps"
+                label="Maximum event reporting throughput"
                 value="currentConfig['syscheck-syscheck'].syscheck.max_eps">
             </wz-config-item>
             <wz-config-item
@@ -77,7 +77,7 @@
                 value="currentConfig['syscheck-syscheck'].syscheck.process_priority">
             </wz-config-item>
             <wz-config-item
-                label="Database"
+                label="Database stored type"
                 value="currentConfig['syscheck-syscheck'].syscheck.database">
             </wz-config-item>
 
