change database in fim synchronization

--- a/public/templates/management/configuration/integrity-monitoring/fim-general.html
+++ b/public/templates/management/configuration/integrity-monitoring/fim-general.html
@@ -77,7 +77,7 @@
                 value="currentConfig['syscheck-syscheck'].syscheck.process_priority">
             </wz-config-item>
             <wz-config-item
-                label="Database stored type"
+                label="Database type"
                 value="currentConfig['syscheck-syscheck'].syscheck.database">
             </wz-config-item>
 
