new fim settings

--- a/public/templates/agents/agents-fim.html
+++ b/public/templates/agents/agents-fim.html
@@ -114,6 +114,6 @@
 
 <div ng-if="tab === 'fim' && tabView === 'panels' && showNewFim">
     <div ng-if="agent && agent.os">
-        <react-component name="MainFim" />
+        <react-component name="MainFim" props="fimProps"/>
     </div>
 </div>
