Redesign Agent welcome screen

--- a/public/less/components/module.less
+++ b/public/less/components/module.less
@@ -17,6 +17,10 @@
     height: 112px;
 }
 
+.wz-module-header-main{
+    height: 150px;
+}
+
 .wz-module-header .euiTab__content{
     font-size: 16px!important;
 }
@@ -25,4 +29,8 @@
     margin-top: 112px;
     position: absolute;
     width: 100%;
+}
+
+.wz-module-body-main {
+    margin-top: 165px;
 }
