--- a/public/components/wz-menu/wz-menu.less
+++ b/public/components/wz-menu/wz-menu.less
@@ -47,6 +47,25 @@ wz-menu {
     border-right: 1px solid #d3dae6;
 }
 
+.wz-menu-left-side .euiButtonEmpty {
+    width: 100%;
+    margin-bottom: 4px;
+}
+
+.wz-menu-left-side .euiButtonEmpty__content {
+    justify-content: left;
+}
+
+.wz-menu-left-side .euiButtonEmpty__text {
+    width: 100%;
+    text-align: left;
+    display: contents;
+}
+
+.wz-menu-left-side .wz-menu-select{
+    background: transparent;
+}
+
 .wz-menu-right-side{
     padding: 16px;
 }
