--- a/public/templates/management/configuration/integrity-monitoring/fim-general.html
+++ b/public/templates/management/configuration/integrity-monitoring/fim-general.html
@@ -53,6 +53,18 @@
                 value="currentConfig['syscheck-syscheck'].syscheck.skip_nfs">
             </wz-config-item>
             <wz-config-item
+                label="Skip scan of /dev directory"
+                value="currentConfig['syscheck-syscheck'].syscheck.skip_dev">
+            </wz-config-item>
+            <wz-config-item
+                label="Skip scan of /sys directory"
+                value="currentConfig['syscheck-syscheck'].syscheck.skip_sys">
+            </wz-config-item>
+            <wz-config-item
+                label="Skip scan of /proc directory"
+                value="currentConfig['syscheck-syscheck'].syscheck.skip_proc">
+            </wz-config-item>
+            <wz-config-item
                 label="Remove old local snapshots"
                 value="currentConfig['syscheck-syscheck'].syscheck.remove_old_diff || 'yes'">
             </wz-config-item>
