Add dashboard load

--- a/public/less/components/module.less
+++ b/public/less/components/module.less
@@ -21,6 +21,10 @@
     height: 150px;
 }
 
+.wz-module-header .euiTabs{
+    padding-top: 6px;
+}
+
 .wz-module-header .euiTab__content{
     font-size: 16px!important;
 }
@@ -29,6 +33,10 @@
     margin-top: 112px;
     position: absolute;
     width: 100%;
+}
+
+.wz-module-body .globalQueryBar{
+    padding: 16px 16px 0px 16px!important;
 }
 
 .wz-module-body-main {
