--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -9,10 +9,8 @@
                 <!-- Breadcrumbs -->
                 <div layout="row" layout-padding>
                     <!-- If you're not on the Welcome tab, show a functional breadcrumb -->
-                    <div ng-if="octrl.tab !== 'welcome'">
-                        <span class="wz-text-link cursor-pointer" ng-click="octrl.switchTab('welcome')">Overview</span>
-                        <span> / </span>
-                        <span>{{ octrl.tabNames[octrl.tab] }}</span>
+                    <div ng-if="octrl.tab !== 'welcome'" style="padding-left: 5px">
+                        <react-component flex name="WzCurrentOverviewSectionWrapper" props="octrl.currentOverviewSectionProps" />
                     </div>
                 </div>
                 <!-- End breadcrumbs -->
@@ -49,12 +47,6 @@
                 <!-- End Discover/Dashboard buttons section -->
             </div>
             <!-- End navigation section -->
-
-            <!-- Navigation bar -->
-            <div ng-if="octrl.overviewTabsProps">
-                <react-component name="Tabs" props="octrl.overviewTabsProps" />
-            </div>
-            <!-- End of navigation bar -->
 
             <!-- Discover search bar section -->
             <kbn-dis ng-show="octrl.tab !== 'welcome'"></kbn-dis>
