Refactor enable disable extensions

--- a/public/templates/agents/agents-welcome.html
+++ b/public/templates/agents/agents-welcome.html
@@ -34,7 +34,7 @@
         }" />
     </div>
 
-    <div layout="row" layout-padding ng-if="welcomeCardsProps">
+    <div ng-if="welcomeCardsProps">
         <react-component name="WelcomeScreenAgent" props="welcomeCardsProps" />
     </div>
 </div>
