--- a/public/templates/settings/settings.pug
+++ b/public/templates/settings/settings.pug
@@ -1,5 +1,6 @@
 include ./settings.head
 include ./settings-api.html
+include ./settings-modules.html
 include ./settings-configuration.html
 include ./settings-logs.html
 include ./settings-about.html
