--- a/public/templates/visualize/overview-welcome.html
+++ b/public/templates/visualize/overview-welcome.html
@@ -1,5 +1,4 @@
 <div layout="column" layout-align="start stretch" ng-if="octrl.tab === 'welcome'">
-
     <div layout="row" layout-padding>
         <react-component name="StatsOverview" style="padding-bottom: 0;" flex props="{
                 total: octrl.agentsCountTotal >= 0 ? octrl.agentsCountTotal : '-',
@@ -7,9 +6,5 @@
                 disconnected: octrl.agentsCountDisconnected >= 0 ? octrl.agentsCountDisconnected : '-',
                 neverConnected: octrl.agentsCountNeverConnected >= 0 ? octrl.agentsCountNeverConnected : '-'}" />
     </div>
-
-    <div layout="row" layout-padding>
-        <react-component name="WelcomeScreenOverview" props="octrl.welcomeCardsProps" style="padding-top: 0;" />
-    </div>
-
+    <react-component name="WelcomeScreenOverview" props="octrl.welcomeCardsProps" />
 </div>
