--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -5,11 +5,11 @@
     <div ng-show="!actrl.addingNewAgent">
         <div flex="auto" layout="column" ng-cloak ng-controller="overviewController as octrl">
             <!-- Navigation section -->
-            <div layout="row" layout-align="start center" ng-if="octrl.tab !== 'welcome'">
+            <div layout="row" layout-align="start center">
                 <!-- Breadcrumbs -->
                 <div layout="row" layout-padding>
                     <!-- If you're not on the Welcome tab, show a functional breadcrumb -->
-                    <div ng-if="octrl.tab !== 'welcome'" style="padding-left: 5px">
+                    <div ng-show="octrl.tab !== 'welcome'" style="padding-left: 5px">
                         <react-component flex name="WzCurrentOverviewSectionWrapper" props="octrl.currentOverviewSectionProps" />
                     </div>
                 </div>
